fix: change content lorem

--- a/index.html
+++ b/index.html
@@ -202,19 +202,11 @@
           About Us
         </h3>
         <p class="text-[#A7ABB6] text-center">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
-          aperiam asperiores eius optio maiores nam dolorem obcaecati similique
-          voluptatum iusto quae perferendis repellat, eveniet ut vero facere
-          perspiciatis minus tempora! Ullam quidem doloribus aliquam assumenda
-          ratione adipisci necessitatibus ipsam aliquid deserunt sequi enim
-          possimus blanditiis nesciunt perferendis dignissimos omnis
-          reprehenderit facilis, veniam cumque eum quis voluptatibus, pariatur
-          iusto! Sit atque distinctio autem dolore repudiandae quisquam
-          excepturi soluta dignissimos non! Molestiae culpa itaque quos
-          praesentium, rerum mollitia distinctio dolor inventore ducimus alias,
-          consectetur illum provident voluptatem autem nihil iste ut, quam
-          harum. Quae cumque quibusdam perspiciatis eligendi commodi ea dolores
-          excepturi.
+          We are a team of passionate designers and developers dedicated to
+          creating beautiful and functional digital experiences. Our mission is
+          to help businesses achieve their goals through innovative design and
+          technology. With years of experience and a commitment to excellence,
+          we strive to deliver the best results for our clients.
         </p>
       </section>
       <!-- end about es -->
@@ -227,9 +219,8 @@
             Success Project
           </h3>
           <p class="text-[#A7ABB6] text-center mt-4">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas
-            nihil harum nobis ad provident nulla cum eum fugit dolores, sit
-            ipsam autem eius atque!
+            Our team has successfully completed numerous projects, delivering
+            exceptional results and exceeding client expectations.
           </p>
         </div>
 
@@ -251,8 +242,8 @@
                         Web Design
                       </p>
                       <p class="text-[#D1D4DC] font-inte text-sm">
-                        Lörem ipsum astrobel sar direlig. Kronde est konfoni med
-                        kelig. Terabel pov astrobel sar
+                        We create stunning web designs that captivate and engage
+                        your audience.
                       </p>
                     </div>
                     <div>
@@ -280,8 +271,8 @@
                         Website Design
                       </p>
                       <p class="text-[#D1D4DC] font-inte text-sm">
-                        Lörem ipsum astrobel sar direlig. Kronde est konfoni med
-                        kelig. Terabel pov astrobel sar
+                        We design custom websites tailored to your business
+                        needs, ensuring a unique and engaging user experience.
                       </p>
                     </div>
                   </div>
@@ -300,8 +291,8 @@
                         Website Custom
                       </p>
                       <p class="text-[#D1D4DC] font-inte text-sm">
-                        Lörem ipsum astrobel sar direlig. Kronde est konfoni med
-                        kelig. Terabel pov astrobel sar
+                        We provide custom website solutions tailored to your
+                        specific needs.
                       </p>
                     </div>
                   </div>
@@ -330,9 +321,8 @@
               UI Design Exploration
             </p>
             <p class="font-inter text-[#A7ABB6] mt-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-              assumenda et magnam, neque quas accusantium veniam tenetur sunt
-              sint earum?
+              Discover the latest trends and techniques in UI design to inspire
+              your next project.
             </p>
           </div>
 
@@ -357,9 +347,8 @@
         <p
           class="font-inter text-[#A7ABB6] mt-2 text-center m-auto md:w-[50%] w-[80%]"
         >
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-          assumenda et magnam, neque quas accusantium veniam tenetur sunt sint
-          earum?
+          Choose the best plan that suits your needs and budget. Our plans are
+          designed to provide the best value for your investment.
         </p>
 
         <table class="border-collapse mt-12 m-auto md:w-[70%] w-[90%]">
@@ -379,22 +368,26 @@
               <td class="font-lato text-[#516371] text-center py-4">$300</td>
             </tr>
             <tr class="border-t">
-              <td class="font-lato text-[#516371] text-left py-4">Feature</td>
-              <td class="font-lato text-[#516371] text-center py-4">10</td>
-              <td class="font-lato text-[#516371] text-center py-4">20</td>
-              <td class="font-lato text-[#516371] text-center py-4">30</td>
+              <td class="font-lato text-[#516371] text-left py-4">
+                Design Services
+              </td>
+              <td class="font-lato text-[#516371] text-center py-4">
+                Basic Design
+              </td>
+              <td class="font-lato text-[#516371] text-center py-4">
+                Advanced Design
+              </td>
+              <td class="font-lato text-[#516371] text-center py-4">
+                Premium Design
+              </td>
             </tr>
             <tr class="border-t">
-              <td class="font-lato text-[#516371] text-left py-4">Support</td>
-              <td class="font-lato text-[#516371] text-center py-4">24/7</td>
-              <td class="font-lato text-[#516371] text-center py-4">24/7</td>
-              <td class="font-lato text-[#516371] text-center py-4">24/7</td>
-            </tr>
-            <tr class="border-t">
-              <td class="font-lato text-[#516371] text-left py-4">Storage</td>
-              <td class="font-lato text-[#516371] text-center py-4">10GB</td>
-              <td class="font-lato text-[#516371] text-center py-4">20GB</td>
-              <td class="font-lato text-[#516371] text-center py-4">30GB</td>
+              <td class="font-lato text-[#516371] text-left py-4">Revisions</td>
+              <td class="font-lato text-[#516371] text-center py-4">2</td>
+              <td class="font-lato text-[#516371] text-center py-4">5</td>
+              <td class="font-lato text-[#516371] text-center py-4">
+                Unlimited
+              </td>
             </tr>
             <tr class="border-t">
               <td class="font-lato text-[#516371] text-left py-4">Domain</td>
@@ -412,9 +405,8 @@
         <div class="md:w-[70%] w-[90%] m-auto">
           <h3 class="font-lato text-[#516371] text-2xl">Get In Touch</h3>
           <p class="font-inter text-[#A7ABB6] mt-2 md:w-[50%] w-[80%]">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            assumenda et magnam, neque quas accusantium veniam tenetur sunt sint
-            earum?
+            Feel free to reach out to us for any inquiries or questions. We are
+            here to help you and provide the best service possible.
           </p>
         </div>
 
@@ -528,9 +520,8 @@
         <div class="md:w-[70%] w-[90%] m-auto">
           <h3 class="font-lato text-[#516371] text-2xl">Contact</h3>
           <p class="font-inter text-[#A7ABB6] mt-2 md:w-[50%] w-[80%]">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            assumenda et magnam, neque quas accusantium veniam tenetur sunt sint
-            earum?
+            Feel free to contact us for any inquiries or questions. We are here
+            to assist you with any information you need.
           </p>
         </div>
 
@@ -576,9 +567,9 @@
           <div>
             <h2 class="text-lg font-bold mb-4">Pyramid</h2>
             <p class="text-sm leading-relaxed">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel esse
-              nobis praesentium cumque dolores, ratione molestiae laborum sunt
-              exercitationem delectus!
+              We are dedicated to providing exceptional design and development
+              services, ensuring your projects are successful and exceed
+              expectations.
             </p>
             <div class="flex space-x-4 mt-4">
               <a
@@ -605,9 +596,8 @@
           <div>
             <h3 class="text-md font-bold mb-4">Home</h3>
             <ul class="space-y-2">
-              <li><a href="#" class="text-sm hover:underline">Beranda</a></li>
               <li>
-                <a href="#" class="text-sm hover:underline">Program Keahlian</a>
+                <a href="#" class="text-sm hover:underline">About Us</a>
               </li>
               <li><a href="#" class="text-sm hover:underline">Gallery</a></li>
               <li><a href="#" class="text-sm hover:underline">Our News</a></li>
@@ -617,9 +607,8 @@
           <div>
             <h3 class="text-md font-bold mb-4">About</h3>
             <ul class="space-y-2">
-              <li><a href="#" class="text-sm hover:underline">Beranda</a></li>
               <li>
-                <a href="#" class="text-sm hover:underline">Program Keahlian</a>
+                <a href="#" class="text-sm hover:underline">About Us</a>
               </li>
               <li><a href="#" class="text-sm hover:underline">Gallery</a></li>
               <li><a href="#" class="text-sm hover:underline">Our News</a></li>
@@ -640,7 +629,7 @@
               </li>
               <li class="flex items-center space-x-2">
                 <i class="fas fa-map-marker-alt"></i>
-                <span>2972 Westheimer Rd. Santa Ana, Illinois 85486</span>
+                <span>Jl. Nagasari No. 53</span>
               </li>
             </ul>
           </div>
